# bn_native_plugin

./: .gitmodules  CMakeLists.txt  install_unix.sh  plugin.json  project.py  requirements.txt
build_harness/: setup.py
src/: CMakeLists.txt  Plugin.cpp
